--- a/templates/contact.page.tmpl
+++ b/templates/contact.page.tmpl
@@ -35,9 +35,8 @@ B8B Contact Us
 
                             <!--Grid column-->
                             <div class="col-md">
-                                <div class="form-md">
-                                    <input type="email" id="email" name="email" class="form-control"
-                                        placeholder="name@example.com">
+                                <div class="form-floating">
+                                    <input type="email" id="email" name="email" class="form-control" placeholder="user@example.com">
                                     <label for="email">Email</label>
                                 </div>
                             </div>
