--- a/templates/footer.layout.tmpl
+++ b/templates/footer.layout.tmpl
@@ -27,7 +27,11 @@
 	<script src="https://unpkg.com/notie" crossorigin="anonymous"></script>
 
 	<!-- Sweet Alert -->
-	<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.6/dist/sweetalert2.min.js"
+		integrity="sha256-g+B5yFAoRuyqu1TO6d2SaZykDENbeEpFyv8eCZ6wthQ=" crossorigin="anonymous"></script>
+
+	<!-- Custom JS -->
+	<script src="./static/js/custom.js"></script>
 
 	<!-- Custom Page Scripts -->
 	{{block "js" .}} {{end}}
