--- a/templates/head.layout.tmpl
+++ b/templates/head.layout.tmpl
@@ -17,6 +17,10 @@
 	<!-- Notie Notification -->
 	<link rel="stylesheet" type="text/css" href="https://unpkg.com/notie/dist/notie.min.css">
 
+	<!-- Sweet Alert -->
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11.3.6/dist/sweetalert2.min.css"
+		integrity="sha256-7FY/kD9x8sdXwruZy+8tjKt05pkuxyF52nbrSazsNg8=" crossorigin="anonymous">
+
 	<!-- Custom Styles	 -->
 	<link rel="stylesheet" href="./static/style/custom.css">
 
