--- a/templates/home.page.tmpl
+++ b/templates/home.page.tmpl
@@ -95,7 +95,7 @@ B8B Home
     </div>
     <div class="row">
         <div class="column text-center">
-            <a href="book.html" class="btn btn-primary text-center">Book Now</a>
+            <a href="/book" class="btn btn-primary text-center">Book Now</a>
         </div>
     </div>
 </main>
